name:              spider
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable spider
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base
                   ,time
                   ,HTTP
                   ,tagsoup
                   ,regex-base
                   ,regex-tdfa
                   ,http-streams
                   ,io-streams
                   ,bytestring
                   ,containers
                   ,encoding
                   ,webkit
                   ,gtk
                   ,glib
